force-app/main/default/objects/Team__c/Team__c.object-meta.xml
<CustomObject>
    <description>Records the Facilitator, Lead, and Client relationship</description>
    <label>Team</label>
    <nameField>
        <displayFormat>Team-{00000}</displayFormat>
        <label>Team Record</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Teams</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>