force-app/main/default/objects/Team__c/fields/CertificationValidUntil__c.field-meta.xml
<CustomField>
    <fullName>CertificationValidUntil__c</fullName>
    <description>Date that the team certification is valid until</description>
    <label>Certification Valid Until</label>
    <type>Date</type>
</CustomField>