force-app/main/default/objects/Team__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Client</description>
    <label>Client</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Teams (Client)</relationshipLabel>
    <relationshipName>Teams1</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>