force-app/main/default/objects/Team__c/fields/Client_Detail__c.field-meta.xml
<CustomField>
    <fullName>Client_Detail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Client associated with this team</description>
    <label>Client Detail</label>
    <referenceTo>Client__c</referenceTo>
    <relationshipLabel>Teams</relationshipLabel>
    <relationshipName>Teams1</relationshipName>
    <type>Lookup</type>
</CustomField>