force-app/main/default/objects/Team__c/fields/ClientApplicationReceived__c.field-meta.xml
<CustomField>
    <fullName>ClientApplicationReceived__c</fullName>
    <description>The date the most recent version of Client Application was uploaded</description>
    <inlineHelpText>Set at the time of file upload. Do not edit directly.</inlineHelpText>
    <label>Last Client Application</label>
    <type>Date</type>
</CustomField>