force-app/main/default/objects/Team__c/fields/ClientApplicationVideoReceived__c.field-meta.xml
<CustomField>
    <fullName>ClientApplicationVideoReceived__c</fullName>
    <description>The date the most recent version of a Client Application Video was uploaded</description>
    <inlineHelpText>Set at the time of file upload. Do not edit directly.</inlineHelpText>
    <label>Last Client Application Video</label>
    <type>Date</type>
</CustomField>