force-app/main/default/objects/Team__c/fields/ClientAssessmentReceived__c.field-meta.xml
<CustomField>
    <fullName>ClientAssessmentReceived__c</fullName>
    <description>The date the most recent version of Client Assessment was uploaded</description>
    <inlineHelpText>Set at the time of file upload. Do not edit directly.</inlineHelpText>
    <label>Last Assessment Date</label>
    <type>Date</type>
</CustomField>