force-app/main/default/objects/Team__c/fields/ClientCertAgreementReceived__c.field-meta.xml
<CustomField>
    <fullName>ClientCertAgreementReceived__c</fullName>
    <description>The date the most recent version of Client Certification Agreement was uploaded</description>
    <inlineHelpText>Set at the time of file upload. Do not edit directly.</inlineHelpText>
    <label>Last Client Certification Agreement</label>
    <type>Date</type>
</CustomField>