force-app/main/default/objects/Team__c/fields/ClientDecertReceived__c.field-meta.xml
<CustomField>
    <fullName>ClientDecertReceived__c</fullName>
    <description>The date the most recent version of Client Decertification Letter was uploaded</description>
    <inlineHelpText>Set at the time of file upload. Do not edit directly.</inlineHelpText>
    <label>Last Client Decertification Letter</label>
    <type>Date</type>
</CustomField>