force-app/main/default/objects/Team__c/fields/ClientDiscontinueReceived__c.field-meta.xml
<CustomField>
    <fullName>ClientDiscontinueReceived__c</fullName>
    <description>The date the most recent version of Client Discontinuation Letter was uploaded</description>
    <inlineHelpText>Set at the time of file upload. Do not edit directly.</inlineHelpText>
    <label>Last Client Discontinuation Letter</label>
    <type>Date</type>
</CustomField>