force-app/main/default/objects/Team__c/fields/ClientLOMIReceived__c.field-meta.xml
<CustomField>
    <fullName>ClientLOMIReceived__c</fullName>
    <description>The date the most recent version of Client LOMI was uploaded</description>
    <inlineHelpText>Set at the time of file upload. Do not edit directly.</inlineHelpText>
    <label>Last Client LOMI</label>
    <type>Date</type>
</CustomField>