force-app/main/default/objects/Team__c/fields/ClientMentalHealthFormReceived__c.field-meta.xml
<CustomField>
    <fullName>ClientMentalHealthFormReceived__c</fullName>
    <description>The date the most recent version of Client Mental Health Form was uploaded</description>
    <inlineHelpText>Set at the time of file upload. Do not edit directly.</inlineHelpText>
    <label>Last Mental Health Provider Form</label>
    <type>Date</type>
</CustomField>