force-app/main/default/objects/Team__c/fields/ClientNotesReceived__c.field-meta.xml
<CustomField>
    <fullName>ClientNotesReceived__c</fullName>
    <description>The date the most recent version of Client Interview Notes was uploaded</description>
    <inlineHelpText>Set at the time of file upload. Do not edit directly.</inlineHelpText>
    <label>Last Interview Date</label>
    <type>Date</type>
</CustomField>