force-app/main/default/objects/Team__c/fields/ClientPreApplicationReceived__c.field-meta.xml
<CustomField>
    <fullName>ClientPreApplicationReceived__c</fullName>
    <description>The date the most recent version of Client Pre Application was uploaded</description>
    <label>Last Client Pre Application</label>
    <type>Date</type>
</CustomField>