force-app/main/default/objects/Team__c/fields/ClientProvRelFormReceived__c.field-meta.xml
<CustomField>
    <fullName>ClientProvRelFormReceived__c</fullName>
    <description>The date the most recent version of Provider Release Form was uploaded</description>
    <inlineHelpText>Set at the time of file upload. Do not edit directly.</inlineHelpText>
    <label>Last Provider Release Form</label>
    <type>Date</type>
</CustomField>