force-app/main/default/objects/Team__c/fields/ClientVAPWReceived__c.field-meta.xml
<CustomField>
    <fullName>ClientVAPWReceived__c</fullName>
    <description>The date the most recent version of Client Veteran Paperwork was uploaded</description>
    <inlineHelpText>Set at the time of file upload. Do not edit directly.</inlineHelpText>
    <label>Last Client Veteran Paperwork</label>
    <type>Date</type>
</CustomField>