force-app/main/default/objects/Team__c/fields/Created_Date1__c.field-meta.xml
<CustomField>
    <fullName>Created_Date1__c</fullName>
    <formula>DATEVALUE(CreatedDate )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created Date</label>
    <type>Date</type>
</CustomField>