force-app/main/default/objects/Team__c/fields/Dog__c.field-meta.xml
<CustomField>
    <fullName>Dog__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Dog on the team</description>
    <label>Dog</label>
    <referenceTo>Dog__c</referenceTo>
    <relationshipLabel>Teams</relationshipLabel>
    <relationshipName>Teams</relationshipName>
    <type>Lookup</type>
</CustomField>