force-app/main/default/objects/Team__c/fields/Dog_Name__c.field-meta.xml
<CustomField>
    <fullName>Dog_Name__c</fullName>
    <label>Dog Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>