force-app/main/default/objects/Team__c/fields/Facilitator__c.field-meta.xml
<CustomField>
    <fullName>Facilitator__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Facilitator</description>
    <label>Facilitator</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Teams (Facilitator)</relationshipLabel>
    <relationshipName>Teams2</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>