force-app/main/default/objects/Team__c/fields/Handler__c.field-meta.xml
<CustomField>
    <fullName>Handler__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Handler in the team, if not the client</description>
    <label>Handler</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Team</relationshipName>
    <type>Lookup</type>
</CustomField>