force-app/main/default/objects/Team__c/fields/HealthFormReceived__c.field-meta.xml
<CustomField>
    <fullName>HealthFormReceived__c</fullName>
    <description>The date the most recent version of Vet Health Form was uploaded</description>
    <inlineHelpText>Set at the time of file upload. Do not edit directly.</inlineHelpText>
    <label>Last Vet Health Form</label>
    <type>Date</type>
</CustomField>