force-app/main/default/objects/Team__c/fields/InitialCertificationDate__c.field-meta.xml
<CustomField>
    <fullName>InitialCertificationDate__c</fullName>
    <label>Initial Certification Date</label>
    <type>Date</type>
</CustomField>