force-app/main/default/objects/Team__c/fields/Lead_Facilitator__c.field-meta.xml
<CustomField>
    <fullName>Lead_Facilitator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead Facilitator</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Teams (Lead Facilitator Contact)</relationshipLabel>
    <relationshipName>Teams1</relationshipName>
    <type>Lookup</type>
</CustomField>