force-app/main/default/objects/Team__c/fields/Lead_Facilitator_Detail__c.field-meta.xml
<CustomField>
    <fullName>Lead_Facilitator_Detail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead Facilitator Detail</label>
    <referenceTo>Team_Facilitator__c</referenceTo>
    <relationshipLabel>Teams (Lead Facilitator)</relationshipLabel>
    <relationshipName>Teams3</relationshipName>
    <type>Lookup</type>
</CustomField>