force-app/main/default/objects/Team__c/fields/NextPatDue__c.field-meta.xml
<CustomField>
    <fullName>NextPatDue__c</fullName>
    <description>Date the next Public Access Test is due</description>
    <label>Next PAT Due</label>
    <type>Date</type>
</CustomField>