force-app/main/default/objects/Team__c/fields/PatCount__c.field-meta.xml
<CustomField>
    <fullName>PatCount__c</fullName>
    <description
    >Number of Public Access Tests the Client-Dog team has taken</description>
    <label>PAT Count</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>