force-app/main/default/objects/Team__c/fields/PatValidUntil__c.field-meta.xml
<CustomField>
    <fullName>PatValidUntil__c</fullName>
    <description>Date the Public Access Test expires</description>
    <inlineHelpText>Derived from most recent passed PAT. Do not edit directly.</inlineHelpText>
    <label>PAT Valid Until</label>
    <type>Date</type>
</CustomField>