force-app/main/default/objects/Team__c/fields/Primary_Dog__c.field-meta.xml
<CustomField>
    <fullName>Primary_Dog__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Look up to the dog object, denotes the primary dog on the team</description>
    <label>Primary Dog</label>
    <referenceTo>Dog__c</referenceTo>
    <relationshipLabel>Teams</relationshipLabel>
    <relationshipName>Teams1</relationshipName>
    <type>Lookup</type>
</CustomField>