force-app/main/default/objects/Team__c/fields/Primary_Handler__c.field-meta.xml
<CustomField>
    <fullName>Primary_Handler__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If there is a handler, this field looks up to their contact record</description>
    <label>Primary Handler</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Teams</relationshipLabel>
    <relationshipName>Teams</relationshipName>
    <type>Lookup</type>
</CustomField>