force-app/main/default/objects/Team__c/fields/PrimaryCertification__c.field-meta.xml
<CustomField>
    <fullName>PrimaryCertification__c</fullName>
    <label>Primary Certification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Certifications</valueSetName>
    </valueSet>
</CustomField>