force-app/main/default/objects/Team__c/fields/SecondaryCertification__c.field-meta.xml
<CustomField>
    <fullName>SecondaryCertification__c</fullName>
    <label>Secondary Certification</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Certifications</valueSetName>
    </valueSet>
</CustomField>