force-app/main/default/objects/Team__c/fields/Team_Facilitator__c.field-meta.xml
<CustomField>
    <fullName>Team_Facilitator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Team Facilitator</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Teams (Team Facilitator Contact)</relationshipLabel>
    <relationshipName>Teams2</relationshipName>
    <type>Lookup</type>
</CustomField>