force-app/main/default/objects/Team__c/fields/Team_Facilitator_Detail__c.field-meta.xml
<CustomField>
    <fullName>Team_Facilitator_Detail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Team Facilitator for this Team</description>
    <label>Team Facilitator Detail</label>
    <referenceTo>Team_Facilitator__c</referenceTo>
    <relationshipLabel>Teams</relationshipLabel>
    <relationshipName>Teams2</relationshipName>
    <type>Lookup</type>
</CustomField>