force-app/main/default/objects/Team__c/fields/Team_Name__c.field-meta.xml
<CustomField>
    <fullName>Team_Name__c</fullName>
    <formula>Client_Name__c  &amp;&quot; - &quot;&amp;  Dog_Name__c  &amp;&quot; - &quot;&amp;  TEXT(DATEVALUE( CreatedDate  ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Team Name</label>
    <type>Text</type>
</CustomField>