force-app/main/default/objects/Team__c/fields/TrainingStartDate__c.field-meta.xml
<CustomField>
    <fullName>TrainingStartDate__c</fullName>
    <inlineHelpText>The date when Team Training actually starts.</inlineHelpText>
    <label>Training Start Date</label>
    <type>Date</type>
</CustomField>