force-app/main/default/objects/Team__c/fields/XrayRequired__c.field-meta.xml
<CustomField>
    <fullName>XrayRequired__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A dog x-ray is required</description>
    <label>X-ray required</label>
    <type>Checkbox</type>
</CustomField>