force-app/main/default/objects/Team__c/validationRules/Unique_Teams.validationRule-meta.xml
<ValidationRule>
    <fullName>Unique_Teams</fullName>
    <active>true</active>
    <errorConditionFormula>and(
    Name = VLOOKUP
       ($ObjectType.Team__c.Fields.Name , $ObjectType.Team__c.Fields.Name, Name ),

    not(
     Id=VLOOKUP
         ($ObjectType.Team__c.Fields.Id , $ObjectType.Team__c.Fields.Name, Name )))</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Please select another team name, this name has already been used in the system</errorMessage>
</ValidationRule>