force-app/main/default/objects/Team__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Client__c</columns>
    <columns>Handler__c</columns>
    <columns>PatValidUntil__c</columns>
    <columns>PatCount__c</columns>
    <columns>PrimaryCertification__c</columns>
    <columns>SecondaryCertification__c</columns>
    <columns>Dog__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>